อัพเดทส่วนหลังบ้านขึ้นคลาวด์

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # PASS_KEY = RDS123
 # PORT = 5000
-# DB_USERNAME = root
+# DB_USERNAME = 'root'
 # DB_PASSWORD = ''
-# DB_HOST = localhost
-# DB_DATABASE = datareadingstudio
+# DB_HOST = 'localhost'
+# DB_DATABASE = 'datareadingstudio'
 
 DB_USERNAME = d6ix85wzxh6g2bgu
 DB_PASSWORD = dlkvccye4qns50hd
