edit connect mysql password

--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@
 # DB_DATABASE = 'datareadingstudio'
 
 DB_USERNAME = d6ix85wzxh6g2bgu
-DB_PASSWORD = dlkvccye4qns50hd
+DB_PASSWORD = nm5qisscd9ohmx9a
 DB_HOST = lolyz0ok3stvj6f0.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
 DB_DATABASE = y2keqs3t0b1daluk
