--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-PASS_KEY = RDS123
-# PORT = 5000
-DB_USERNAME = 'root'
-DB_PASSWORD = ''
-DB_HOST = 'localhost'
-DB_DATABASE = 'datareadingstudio'
+# PASS_KEY = RDS123
+# # PORT = 5000
+# DB_USERNAME = 'root'
+# DB_PASSWORD = ''
+# DB_HOST = 'localhost'
+# DB_DATABASE = 'datareadingstudio'
 
-# DB_USERNAME = d6ix85wzxh6g2bgu
-# DB_PASSWORD = nm5qisscd9ohmx9a
-# DB_HOST = lolyz0ok3stvj6f0.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
-# DB_DATABASE = y2keqs3t0b1daluk
+DB_USERNAME = d6ix85wzxh6g2bgu
+DB_PASSWORD = nm5qisscd9ohmx9a
+DB_HOST = lolyz0ok3stvj6f0.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
+DB_DATABASE = y2keqs3t0b1daluk
